[gd_scene load_steps=29 format=4 uid="uid://bri13kxv672ig"]

[ext_resource type="Script" uid="uid://didwji534yd8d" path="res://Scripts/Interfaz/inicio.gd" id="1_6wmnn"]
[ext_resource type="Script" uid="uid://calji8pm36a08" path="res://Scripts/Interfaz/area_niveles.gd" id="2_5rwxf"]
[ext_resource type="Texture2D" uid="uid://clrikcxk660fh" path="res://Assets/tileset.png" id="2_ofejf"]
[ext_resource type="Texture2D" uid="uid://bjsx5jx0w4or6" path="res://Assets/tileset_nieve.png" id="3_ef5f0"]
[ext_resource type="Texture2D" uid="uid://c7y5vudpxt0qp" path="res://Sprites/Inicio/fogata.png" id="4_l56qc"]
[ext_resource type="Texture2D" uid="uid://d4hlj6vxy3uon" path="res://Sprites/Vikingo/fall_viking.png" id="5_rfay7"]
[ext_resource type="Texture2D" uid="uid://du36aaq74ykir" path="res://Sprites/Inicio/FogataMan.png" id="6_xc3es"]
[ext_resource type="Texture2D" uid="uid://v8n7a78mwabb" path="res://Sprites/Inicio/barco.png" id="7_jeciw"]
[ext_resource type="Texture2D" uid="uid://cnv7c88yr2w5o" path="res://Sprites/Inicio/herreria_nevada.png" id="8_r2a0m"]
[ext_resource type="Texture2D" uid="uid://nm83aiwep38k" path="res://Sprites/Inicio/Casa_nevada.png" id="9_sieaa"]
[ext_resource type="Texture2D" uid="uid://dw5o1t4wmwpu5" path="res://Sprites/Inicio/tocon.png" id="10_tgk5d"]
[ext_resource type="Script" uid="uid://kn0n2soufi7j" path="res://Scripts/Interfaz/selector_personajes_casa.gd" id="11_x26qx"]
[ext_resource type="Texture2D" uid="uid://bly4js7rsrd86" path="res://Sprites/Inicio/fondo_aldea_nubladov2.png" id="12_2amer"]
[ext_resource type="Texture2D" uid="uid://cdj7eckpm5ma7" path="res://Sprites/Inicio/salidaBarco.png" id="13_dkt54"]
[ext_resource type="Script" uid="uid://bv0pm2e14nhkj" path="res://Scripts/Interfaz/barco_area.gd" id="14_xldw7"]
[ext_resource type="AudioStream" uid="uid://p74cf510edy4" path="res://Audio/3. Saga of the Sea Wolves.mp3" id="15_f4hti"]
[ext_resource type="Script" uid="uid://b4aqtq736rojs" path="res://Scripts/Interfaz/ajustes_area.gd" id="16_3x7h1"]
[ext_resource type="PackedScene" uid="uid://byb74pmcdb8fy" path="res://Scenes/Plataformas/plataforma_normal.tscn" id="18_oqijo"]
[ext_resource type="PackedScene" uid="uid://df3q078ettq20" path="res://Scenes/Plataformas/trampolin.tscn" id="19_k1pry"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h08hr"]
size = Vector2(56, 45)

[sub_resource type="CanvasTexture" id="CanvasTexture_e1p6u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fimp5"]
texture = ExtResource("2_ofejf")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -0.25, 1.5, 0.875, -0.125, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.5, -8, 0.75)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 0.125, 8, 0, 0.5, -8, -1.25)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 3.375, 8, 2.625, -1.25, -2, -1.375, -2.75, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0.5, -8, 0.375, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.375, -8, 8, -8, 8, 8, -0.875, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 1.625, -8, 8, -8, 8, 8, 3.375, 8, 2.5, -6.375, -2.125, -8, -3.25, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0.375, -8, 1.25, -1.25, 8, 0.25, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1.25, 8, -1.375, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.75, -1, 0.5, -8, 8, -8, 8, 8, -8, 8, -8, -0.5)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.65165, -8, -2.12132, 2.12132, 3.18198, 1.59099, 3.71231, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sipp6"]
texture = ExtResource("3_ef5f0")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
6:1/0 = 0
5:1/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0

[sub_resource type="TileSet" id="TileSet_08w1j"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fimp5")
sources/1 = SubResource("TileSetAtlasSource_sipp6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bu3n"]
size = Vector2(109.5, 132.625)

[sub_resource type="CanvasTexture" id="CanvasTexture_l5pea"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_636ht"]
size = Vector2(215, 83)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yintj"]
a = Vector2(39, 249)
b = Vector2(7, 109)

[node name="Inicio" type="Node2D"]
position = Vector2(-238, -183)
script = ExtResource("1_6wmnn")
metadata/_edit_vertical_guides_ = [-205.0]

[node name="AreaNiveles" type="Area2D" parent="."]
position = Vector2(826, 489)
collision_layer = 2
collision_mask = 2
script = ExtResource("2_5rwxf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaNiveles"]
z_index = 1
position = Vector2(-222, 17.5)
shape = SubResource("RectangleShape2D_h08hr")

[node name="TextoNiveles" type="TextureRect" parent="AreaNiveles"]
visible = false
z_index = 2
offset_left = -301.0
offset_top = -38.0
offset_right = -144.0
offset_bottom = -15.0
texture = SubResource("CanvasTexture_e1p6u")

[node name="Label" type="Label" parent="AreaNiveles/TextoNiveles"]
auto_translate_mode = 1
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 6.0
offset_right = 158.0
offset_bottom = 23.0
text = "ini_lab_niveles"
autowrap_mode = 3

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAQACEAAQABAAAAAAARACEAAQABAAAAAAASACEAAQABAAAAAAATACEAAQABAAAAAAAUACEAAQABAAAAAAAVACEAAQABAAAAAAAWACEAAQABAAAAAAAXACEAAQABAAAAAAAZACEAAQABAAAAAAAaACEAAQABAAAAAAAbACEAAQABAAAAAAAcACEAAQABAAAAAAAdACEAAQABAAAAAAAeACEAAQABAAAAAAAfACEAAQABAAAAAAAgACEAAQABAAAAAAAhACEAAQABAAAAAAAiACEAAQABAAAAAAAjACEAAQABAAAAAAAkACEAAQABAAAAAAAlACEAAQABAAAAAAAmACEAAQABAAAAAAAnACEAAQABAAAAAAAoACEAAQABAAAAAAApACEAAQABAAAAAAAqACEAAQABAAAAAAArACEAAQABAAAAAAAsACEAAQABAAAAAAAtACEAAQABAAAAAAAuACEAAQABAAAAAAAvACEAAQABAAAAAAAwACEAAQABAAAAAAA5ACEAAQABAAAAAAA6ACEAAQABAAAAAAA7ACEAAQABAAAAAAA8ACEAAQABAAAAAAA9ACEAAQABAAAAAAA2ACEAAQABAAAAAAA1ACEAAQABAAAAAAA0ACEAAQABAAAAAAAzACEAAQABAAAAAAAyACEAAQABAAAAAAAxACEAAQABAAAAAAA3ACEAAQABAAAAAAA4ACEAAQABAAAAAAAYACEAAQABAAAAAAA+ACEAAQABAAAAAAA/ACEAAQABAAAAAABAACEAAQABAAAAAABBACEAAQABAAAAAABCACEAAQABAAAAAABDACEAAQABAAAAAABEACEAAQABAAAAAABFACEAAQABAAAAAABGACEAAQABAAAAAABHACEAAQABAAAAAAAPACEAAQABAAAAAAAOACEAAQABAAAAAAANACEAAQABAAAAAAAMACEAAQABAAAAAAALACEAAQABAAAAAAAKACEAAQABAAAAAAAJACEAAQABAAAAAAAIACEAAQABAAAAAAAHACEAAQABAAAAAAAGACEAAQABAAAAAAAFACEAAQABAAAAAAAEACEAAQABAAAAAAADACEAAQABAAAAAAACACEAAQABAAAAAAABACEAAQAHAAAAAABIACEAAQABAAAAAABJACEAAQABAAAAAABKACEAAQABAAAAAABLACEAAQABAAAAAABMACEAAQABAAAAAABNACEAAQABAAAAAABOACEAAQABAAAAAABPACEAAQABAAAAAABQACEAAQABAAAAAABRACEAAQABAAAAAABSACEAAQABAAAAAABTACEAAQABAAAAAABVACEAAQABAAAAAABWACEAAQABAAAAAABXACEAAQABAAAAAABYACEAAQABAAAAAABZACEAAQABAAAAAABaACEAAQABAAAAAABbACEAAQABAAAAAABcACEAAQABAAAAAABMAB4AAQAAAAMAAABNAB4AAQABAAMAAABOAB4AAQACAAMAAABRABwAAQAAAAMAAABSABwAAQABAAMAAABWAB8AAQAAAAMAAABXAB4AAQADAAAAAABXAB8AAQADAAMAAABYABoAAQAAAAMAAABYAB8AAQACAAMAAABZABoAAQABAAMAAABaABoAAQACAAMAAABdAB8AAQAAAAMAAABeAB8AAQABAAMAAABfAB8AAQACAAMAAABdACEAAQABAAAAAABeACEAAQABAAAAAABfACEAAQABAAAAAABgACEAAQABAAAAAAD2/yEAAQAGAAAAAAD3/yEAAQAGAAAAAAD4/yEAAQAGAAAAAAD5/yEAAQAGAAAAAAD6/yEAAQAGAAAAAAD7/yEAAQAGAAAAAAD8/yEAAQAGAAAAAAD9/yEAAQAGAAAAAAD+/yEAAQAGAAAAAAD//yEAAQAGAAAAAAAAACEAAQAGAAAAAAAYACUAAAABAAEAAAAYACQAAAABAAEAAAAYACMAAAABAAEAAAAYACIAAQABAAEAAAAZACIAAQABAAEAAAAZACMAAAABAAEAAAAZACQAAAABAAEAAAAZACUAAAABAAEAAAAaACUAAAABAAEAAAAaACQAAAABAAEAAAAaACMAAAABAAEAAAAaACIAAQABAAEAAAAbACMAAAABAAEAAAAbACQAAAABAAEAAAAbACUAAAABAAEAAAAbACIAAQABAAEAAAAcACIAAQABAAEAAAAcACMAAAABAAEAAAAcACQAAAABAAEAAAAcACUAAAABAAEAAAAdACUAAAABAAEAAAAdACQAAAABAAEAAAAdACMAAAABAAEAAAAdACIAAQABAAEAAAAeACIAAQABAAEAAAAeACMAAAABAAEAAAAeACQAAAABAAEAAAAeACUAAAABAAEAAAAfACQAAAABAAEAAAAfACMAAAABAAEAAAAfACIAAQABAAEAAAAfACUAAAABAAEAAAAgACUAAAABAAEAAAAgACQAAAABAAEAAAAgACMAAAABAAEAAAAgACIAAQABAAEAAAAhACIAAQABAAEAAAAhACMAAAABAAEAAAAhACQAAAABAAEAAAAhACUAAAABAAEAAAAOACIAAQABAAEAAAAOACMAAAABAAEAAAAOACQAAAABAAEAAAAOACUAAAABAAEAAAAPACIAAQABAAEAAAAPACMAAAABAAEAAAAPACQAAAABAAEAAAAPACUAAAABAAEAAAAQACIAAQABAAEAAAAQACMAAAABAAEAAAAQACQAAAABAAEAAAAQACUAAAABAAEAAAARACIAAQABAAEAAAARACMAAAABAAEAAAARACQAAAABAAEAAAARACUAAAABAAEAAAASACIAAQABAAEAAAASACMAAAABAAEAAAASACQAAAABAAEAAAASACUAAAABAAEAAAATACIAAQABAAEAAAATACMAAAABAAEAAAATACQAAAABAAEAAAATACUAAAABAAEAAAAUACIAAQABAAEAAAAUACMAAAABAAEAAAAUACQAAAABAAEAAAAUACUAAAABAAEAAAAVACIAAQABAAEAAAAVACMAAAABAAEAAAAVACQAAAABAAEAAAAVACUAAAABAAEAAAAWACIAAQABAAEAAAAWACMAAAABAAEAAAAWACQAAAABAAEAAAAWACUAAAABAAEAAAAXACIAAQABAAEAAAAXACMAAAABAAEAAAAXACQAAAABAAEAAAAXACUAAAABAAEAAAAEACIAAQABAAEAAAAEACMAAAABAAEAAAAEACQAAAABAAEAAAAEACUAAAABAAEAAAAFACIAAQABAAEAAAAFACMAAAABAAEAAAAFACQAAAABAAEAAAAFACUAAAABAAEAAAAGACIAAQABAAEAAAAGACMAAAABAAEAAAAGACQAAAABAAEAAAAGACUAAAABAAEAAAAHACIAAQABAAEAAAAHACMAAAABAAEAAAAHACQAAAABAAEAAAAHACUAAAABAAEAAAAIACIAAQABAAEAAAAIACMAAAABAAEAAAAIACQAAAABAAEAAAAIACUAAAABAAEAAAAJACIAAQABAAEAAAAJACMAAAABAAEAAAAJACQAAAABAAEAAAAJACUAAAABAAEAAAAKACIAAQABAAEAAAAKACMAAAABAAEAAAAKACQAAAABAAEAAAAKACUAAAABAAEAAAALACIAAQABAAEAAAALACMAAAABAAEAAAALACQAAAABAAEAAAALACUAAAABAAEAAAAMACIAAQABAAEAAAAMACMAAAABAAEAAAAMACQAAAABAAEAAAAMACUAAAABAAEAAAANACIAAQABAAEAAAANACMAAAABAAEAAAANACQAAAABAAEAAAANACUAAAABAAEAAAACACIAAQABAAEAAAACACMAAAABAAEAAAACACQAAAABAAEAAAACACUAAAABAAEAAAADACIAAQABAAEAAAADACMAAAABAAEAAAADACQAAAABAAEAAAADACUAAAABAAEAAAAiACIAAQABAAEAAAAiACMAAAABAAEAAAAiACQAAAABAAEAAAAiACUAAAABAAEAAAAjACIAAQABAAEAAAAjACMAAAABAAEAAAAjACQAAAABAAEAAAAjACUAAAABAAEAAAAkACIAAQABAAEAAAAkACMAAAABAAEAAAAkACQAAAABAAEAAAAkACUAAAABAAEAAAAlACIAAQABAAEAAAAlACMAAAABAAEAAAAlACQAAAABAAEAAAAlACUAAAABAAEAAAAmACIAAQABAAEAAAAmACMAAAABAAEAAAAmACQAAAABAAEAAAAmACUAAAABAAEAAAAnACIAAQABAAEAAAAnACMAAAABAAEAAAAnACQAAAABAAEAAAAnACUAAAABAAEAAAAoACIAAQABAAEAAAAoACMAAAABAAEAAAAoACQAAAABAAEAAAAoACUAAAABAAEAAAApACIAAQABAAEAAAApACMAAAABAAEAAAApACQAAAABAAEAAAApACUAAAABAAEAAAAqACIAAQABAAEAAAAqACMAAAABAAEAAAAqACQAAAABAAEAAAAqACUAAAABAAEAAAArACIAAQABAAEAAAArACMAAAABAAEAAAArACQAAAABAAEAAAArACUAAAABAAEAAAAsACIAAQABAAEAAAAsACMAAAABAAEAAAAsACQAAAABAAEAAAAsACUAAAABAAEAAAAtACIAAQABAAEAAAAtACMAAAABAAEAAAAtACQAAAABAAEAAAAtACUAAAABAAEAAAAuACIAAQABAAEAAAAuACMAAAABAAEAAAAuACQAAAABAAEAAAAuACUAAAABAAEAAAAvACIAAQABAAEAAAAvACMAAAABAAEAAAAvACQAAAABAAEAAAAvACUAAAABAAEAAAAwACIAAQABAAEAAAAwACMAAAABAAEAAAAwACQAAAABAAEAAAAwACUAAAABAAEAAAAxACIAAQABAAEAAAAxACMAAAABAAEAAAAxACQAAAABAAEAAAAxACUAAAABAAEAAAAyACIAAQABAAEAAAAyACMAAAABAAEAAAAyACQAAAABAAEAAAAyACUAAAABAAEAAAAzACIAAQABAAEAAAAzACMAAAABAAEAAAAzACQAAAABAAEAAAAzACUAAAABAAEAAAA0ACIAAQABAAEAAAA0ACMAAAABAAEAAAA0ACQAAAABAAEAAAA0ACUAAAABAAEAAAA1ACIAAQABAAEAAAA1ACMAAAABAAEAAAA1ACQAAAABAAEAAAA1ACUAAAABAAEAAAA2ACIAAQABAAEAAAA2ACMAAAABAAEAAAA2ACQAAAABAAEAAAA2ACUAAAABAAEAAAA3ACIAAQABAAEAAAA3ACMAAAABAAEAAAA3ACQAAAABAAEAAAA3ACUAAAABAAEAAAA4ACIAAQABAAEAAAA4ACMAAAABAAEAAAA4ACQAAAABAAEAAAA4ACUAAAABAAEAAAA5ACIAAQABAAEAAAA5ACMAAAABAAEAAAA5ACQAAAABAAEAAAA5ACUAAAABAAEAAAA6ACIAAQABAAEAAAA6ACMAAAABAAEAAAA6ACQAAAABAAEAAAA6ACUAAAABAAEAAAA7ACIAAQABAAEAAAA7ACMAAAABAAEAAAA7ACQAAAABAAEAAAA7ACUAAAABAAEAAAA8ACIAAQABAAEAAAA8ACMAAAABAAEAAAA8ACQAAAABAAEAAAA8ACUAAAABAAEAAAA9ACIAAQABAAEAAAA9ACMAAAABAAEAAAA9ACQAAAABAAEAAAA9ACUAAAABAAEAAAA+ACIAAQABAAEAAAA+ACMAAAABAAEAAAA+ACQAAAABAAEAAAA+ACUAAAABAAEAAAA/ACIAAQABAAEAAAA/ACMAAAABAAEAAAA/ACQAAAABAAEAAAA/ACUAAAABAAEAAABAACIAAQABAAEAAABAACMAAAABAAEAAABAACQAAAABAAEAAABAACUAAAABAAEAAABBACIAAQABAAEAAABBACMAAAABAAEAAABBACQAAAABAAEAAABBACUAAAABAAEAAABCACIAAQABAAEAAABCACMAAAABAAEAAABCACQAAAABAAEAAABCACUAAAABAAEAAABDACIAAQABAAEAAABDACMAAAABAAEAAABDACQAAAABAAEAAABDACUAAAABAAEAAABEACIAAQABAAEAAABEACMAAAABAAEAAABEACQAAAABAAEAAABEACUAAAABAAEAAABFACIAAQABAAEAAABFACMAAAABAAEAAABFACQAAAABAAEAAABFACUAAAABAAEAAABGACIAAQABAAEAAABGACMAAAABAAEAAABGACQAAAABAAEAAABGACUAAAABAAEAAABHACIAAQABAAEAAABHACMAAAABAAEAAABHACQAAAABAAEAAABHACUAAAABAAEAAABIACIAAQABAAEAAABIACMAAAABAAEAAABIACQAAAABAAEAAABIACUAAAABAAEAAABJACIAAQABAAEAAABJACMAAAABAAEAAABJACQAAAABAAEAAABJACUAAAABAAEAAABKACIAAQABAAEAAABKACMAAAABAAEAAABKACQAAAABAAEAAABKACUAAAABAAEAAABLACIAAQABAAEAAABLACMAAAABAAEAAABLACQAAAABAAEAAABLACUAAAABAAEAAABMACIAAQABAAEAAABMACMAAAABAAEAAABMACQAAAABAAEAAABMACUAAAABAAEAAABNACIAAQABAAEAAABNACMAAAABAAEAAABNACQAAAABAAEAAABNACUAAAABAAEAAABOACIAAQABAAEAAABOACMAAAABAAEAAABOACQAAAABAAEAAABOACUAAAABAAEAAABPACIAAQABAAEAAABPACMAAAABAAEAAABPACQAAAABAAEAAABPACUAAAABAAEAAABQACIAAQABAAEAAABQACMAAAABAAEAAABQACQAAAABAAEAAABQACUAAAABAAEAAABRACIAAQABAAEAAABRACMAAAABAAEAAABRACQAAAABAAEAAABRACUAAAABAAEAAABSACIAAQABAAEAAABSACMAAAABAAEAAABSACQAAAABAAEAAABSACUAAAABAAEAAABTACIAAQABAAEAAABTACMAAAABAAEAAABTACQAAAABAAEAAABTACUAAAABAAEAAABUACIAAQABAAEAAABUACMAAAABAAEAAABUACQAAAABAAEAAABUACUAAAABAAEAAABVACIAAQABAAEAAABVACMAAAABAAEAAABVACQAAAABAAEAAABVACUAAAABAAEAAABWACIAAQABAAEAAABWACMAAAABAAEAAABWACQAAAABAAEAAABWACUAAAABAAEAAABXACIAAQABAAEAAABXACMAAAABAAEAAABXACQAAAABAAEAAABXACUAAAABAAEAAABYACIAAQABAAEAAABYACMAAAABAAEAAABYACQAAAABAAEAAABYACUAAAABAAEAAABZACIAAQABAAEAAABZACMAAAABAAEAAABZACQAAAABAAEAAABZACUAAAABAAEAAABaACIAAQABAAEAAABaACMAAAABAAEAAABaACQAAAABAAEAAABaACUAAAABAAEAAABbACIAAQABAAEAAABbACMAAAABAAEAAABbACQAAAABAAEAAABbACUAAAABAAEAAABcACIAAQABAAEAAABcACMAAAABAAEAAABcACQAAAABAAEAAABcACUAAAABAAEAAABdACIAAQABAAEAAABdACMAAAABAAEAAABdACQAAAABAAEAAABdACUAAAABAAEAAABeACIAAQABAAEAAABeACMAAAABAAEAAABeACQAAAABAAEAAABeACUAAAABAAEAAABfACIAAQABAAEAAABfACMAAAABAAEAAABfACQAAAABAAEAAABfACUAAAABAAEAAABgACIAAQABAAEAAABgACMAAAABAAEAAABgACQAAAABAAEAAABgACUAAAABAAEAAAABAB4AAAADAAAAAAABABYAAAADAAAAAAABABcAAAADAAAAAAABABgAAAADAAAAAAABABkAAAADAAAAAAABABoAAAADAAAAAAABABsAAAADAAAAAAABABwAAAADAAAAAAABAB0AAAADAAAAAAABAB8AAAADAAAAAAABACAAAAADAAAAAABhAB8AAAADAAAAAABhAB4AAAADAAAAAABhAB0AAAADAAAAAABhABwAAAADAAAAAABhABsAAAADAAAAAABhABoAAAADAAAAAABhABkAAAADAAAAAABhABgAAAADAAAAAABhABcAAAADAAAAAABTABwAAQACAAMAAAABACIAAQAHAAEAAAD1/yEAAQAGAAAAAAD0/yEAAQAGAAAAAADz/yEAAQAGAAAAAADy/yEAAQAGAAAAAADx/yEAAQAGAAAAAADw/yEAAQAGAAAAAADv/yEAAQAGAAAAAADu/yEAAQAGAAAAAADt/yEAAQAGAAAAAADs/yEAAQAGAAAAAADr/yEAAQAGAAAAAADr/yIAAQAGAAEAAADs/yIAAQAGAAEAAADt/yIAAQAGAAEAAADu/yIAAQAGAAEAAADv/yIAAQAGAAEAAADw/yIAAQAGAAEAAADx/yIAAQAGAAEAAADy/yIAAQAGAAEAAADz/yIAAQAGAAEAAAD0/yIAAQAGAAEAAAD1/yIAAQAGAAEAAAD2/yIAAQAGAAEAAAD3/yIAAQAGAAEAAAD4/yIAAQAGAAEAAAD5/yIAAQAGAAEAAAD6/yIAAQAGAAEAAAD7/yIAAQAGAAEAAAD8/yIAAQAGAAEAAAD9/yIAAQAGAAEAAAD+/yIAAQAGAAEAAAD//yIAAQAGAAEAAAAAACIAAQAGAAEAAAAAACMAAQAGAAEAAAD//yMAAQAGAAEAAAD+/yMAAQAGAAEAAAD9/yMAAQAGAAEAAAD8/yMAAQAGAAEAAAD7/yMAAQAGAAEAAAD6/yMAAQAGAAEAAAD5/yMAAQAGAAEAAAD4/yMAAQAGAAEAAAD3/yMAAQAGAAEAAAD2/yMAAQAGAAEAAAD1/yMAAQAGAAEAAAD0/yMAAQAGAAEAAADz/yMAAQAGAAEAAADy/yMAAQAGAAEAAADx/yMAAQAGAAEAAADw/yMAAQAGAAEAAADv/yMAAQAGAAEAAADu/yMAAQAGAAEAAADt/yMAAQAGAAEAAADs/yMAAQAGAAEAAADr/yMAAQAGAAEAAADs/yQAAQAGAAEAAADs/yUAAQAGAAEAAADt/yUAAQAGAAEAAADu/yUAAQAGAAEAAADu/yYAAQAGAAEAAADv/yYAAQAGAAEAAADw/yYAAQAGAAEAAADx/yYAAQAGAAEAAADy/yYAAQAGAAEAAADz/yYAAQAGAAEAAAD0/yYAAQAGAAEAAAD1/yYAAQAGAAEAAAD1/yUAAQAGAAEAAAD2/yUAAQAGAAEAAAD3/yUAAQAGAAEAAAD4/yUAAQAGAAEAAAD4/yQAAQAGAAEAAAD3/yQAAQAGAAEAAAD2/yQAAQAGAAEAAAD1/yQAAQAGAAEAAADt/yQAAQAGAAEAAADu/yQAAQAGAAEAAADv/yQAAQAGAAEAAADv/yUAAQAGAAEAAADw/yUAAQAGAAEAAADx/yUAAQAGAAEAAADy/yUAAQAGAAEAAADz/yUAAQAGAAEAAADz/yQAAQAGAAEAAADy/yQAAQAGAAEAAADx/yQAAQAGAAEAAADw/yQAAQAGAAEAAAD0/yQAAQAGAAEAAAD0/yUAAQAGAAEAAAD5/yQAAQAGAAEAAAD5/yUAAQAGAAEAAAD6/yQAAQAGAAEAAAD7/yQAAQAGAAEAAAD6/yUAAQAGAAEAAAD7/yUAAQAGAAEAAAD8/yUAAQAGAAEAAAD9/yUAAQAGAAEAAAD+/yQAAQAGAAEAAAD9/yQAAQAGAAEAAAD8/yQAAQAGAAEAAAD+/yUAAQAGAAEAAAD//yUAAQAGAAEAAAAAACQAAQAGAAEAAAD//yQAAQAGAAEAAAAAACUAAQAGAAEAAAD//yYAAQAGAAEAAAAAACYAAQAGAAEAAAD+/yYAAQAGAAEAAAD9/yYAAQAGAAEAAAD8/yYAAQAGAAEAAAD7/yYAAQAGAAEAAAD6/yYAAQAGAAEAAAD5/yYAAQAGAAEAAAD4/yYAAQAGAAEAAAD3/yYAAQAGAAEAAAD2/yYAAQAGAAEAAADs/yYAAQAGAAEAAADr/yYAAQAGAAEAAADr/yUAAQAGAAEAAADr/yQAAQAGAAEAAADt/yYAAQAGAAEAAAABACMAAQAHAAEAAAABACQAAQAHAAEAAAABACUAAQAHAAEAAAABACYAAQAHAAEAAABUACEAAQABAAAAAABXACAAAQADAAIAAABhACAAAAADAAAAAAA=")
tile_set = SubResource("TileSet_08w1j")

[node name="Fogata" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(586, 520)
scale = Vector2(0.0553607, 0.0568638)
texture = ExtResource("4_l56qc")

[node name="vikiHerrero" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(784, 510)
texture = ExtResource("5_rfay7")

[node name="vikiFogata" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(618, 510)
texture = ExtResource("6_xc3es")

[node name="Barco" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-97, 456)
texture = ExtResource("7_jeciw")

[node name="Herreria" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(827, 473)
texture = ExtResource("8_r2a0m")

[node name="Casa" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(336, 460)
texture = ExtResource("9_sieaa")

[node name="CasaArea" type="Area2D" parent="."]
position = Vector2(350, 472)
collision_layer = 2
collision_mask = 2
script = ExtResource("11_x26qx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CasaArea"]
position = Vector2(-9, 2)
shape = SubResource("RectangleShape2D_1bu3n")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(585, 517)
limit_left = -500
limit_top = -500
limit_right = 1200
limit_bottom = 400

[node name="TextoSelector" type="TextureRect" parent="."]
visible = false
z_index = 2
offset_left = 256.0
offset_top = 424.0
offset_right = 408.0
offset_bottom = 455.0
texture = SubResource("CanvasTexture_l5pea")

[node name="Label" type="Label" parent="TextoSelector"]
auto_translate_mode = 1
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 6.0
offset_right = 152.0
offset_bottom = 23.0
text = "ini_lab_selector"
autowrap_mode = 3

[node name="fondo" type="Sprite2D" parent="."]
light_mask = 0
z_index = -1
position = Vector2(605, 353)
texture = ExtResource("12_2amer")

[node name="SalidaBarco" type="Sprite2D" parent="."]
position = Vector2(49, 460)
texture = ExtResource("13_dkt54")

[node name="BarcoArea" type="Area2D" parent="."]
position = Vector2(43, 462)
collision_layer = 2
collision_mask = 2
script = ExtResource("14_xldw7")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="BarcoArea"]
size = Vector2i(284, 100)
dialog_text = "ini_lab_salir_dialog"
dialog_autowrap = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarcoArea"]
position = Vector2(4, -4.6875)
shape = SubResource("RectangleShape2D_1bu3n")

[node name="TextoSalir" type="TextureRect" parent="."]
visible = false
z_index = 2
offset_left = -18.0
offset_top = 383.0
offset_right = 109.0
offset_bottom = 437.0
texture = SubResource("CanvasTexture_e1p6u")

[node name="Label" type="Label" parent="TextoSalir"]
auto_translate_mode = 1
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 6.0
offset_right = 158.0
offset_bottom = 23.0
text = "ini_lab_salir"
autowrap_mode = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_f4hti")
autoplay = true
bus = &"Music"
parameters/looping = false

[node name="AreaAjustes" type="Area2D" parent="."]
position = Vector2(826, 489)
collision_layer = 2
collision_mask = 2
script = ExtResource("16_3x7h1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAjustes"]
position = Vector2(3, -2)
shape = SubResource("RectangleShape2D_636ht")

[node name="TextoAjustes" type="TextureRect" parent="."]
visible = false
z_index = 2
offset_left = 797.0
offset_top = 405.0
offset_right = 946.0
offset_bottom = 459.0
texture = SubResource("CanvasTexture_e1p6u")

[node name="Label" type="Label" parent="TextoAjustes"]
auto_translate_mode = 1
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 2.0
offset_top = 8.0
offset_right = 154.0
offset_bottom = 57.0
text = "ini_lab_ajustes"
autowrap_mode = 3

[node name="Tocon" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(662, 519)
texture = ExtResource("10_tgk5d")

[node name="Barrera" type="StaticBody2D" parent="."]
position = Vector2(-10, 391)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrera"]
position = Vector2(-3, -109)
shape = SubResource("SegmentShape2D_yintj")

[node name="Plataforma" parent="." instance=ExtResource("18_oqijo")]
position = Vector2(1080, 498)

[node name="Trampolin" parent="." instance=ExtResource("19_k1pry")]
position = Vector2(994, 474)

[connection signal="body_entered" from="AreaNiveles" to="AreaNiveles" method="_on_body_entered"]
[connection signal="body_exited" from="AreaNiveles" to="AreaNiveles" method="_on_body_exited"]
[connection signal="body_entered" from="CasaArea" to="CasaArea" method="_on_body_entered"]
[connection signal="body_exited" from="CasaArea" to="CasaArea" method="_on_body_exited"]
[connection signal="body_entered" from="BarcoArea" to="BarcoArea" method="_on_body_entered"]
[connection signal="body_exited" from="BarcoArea" to="BarcoArea" method="_on_body_exited"]
[connection signal="confirmed" from="BarcoArea/ConfirmationDialog" to="BarcoArea" method="_on_confirmation_dialog_confirmed"]
[connection signal="body_entered" from="AreaAjustes" to="AreaAjustes" method="_on_body_entered"]
[connection signal="body_exited" from="AreaAjustes" to="AreaAjustes" method="_on_body_exited"]
